@@ -1,3 +1,9 @@
+Sun Nov 18 13:08:11 CET 2018
+	Parse arguments with (properly) escaped URLs correctly.
+	(making things work with recent cURL changes, #5473).
+	Replace sprintf with snprintf in testcases.
+	Releasing libmicrohttpd 0.9.61. -CG
+
 Wed Nov 14 14:01:21 CET 2018
 	Fix build issue with GnuTLS < 3.0. -CG
 
